# uclales

./: 80_unstable_00_equi  80_unstable_heatflx  CMakeLists.txt  README.md  environment.yml  test1
.github/workflows/: app.yml
cases/: matplotlibrc  plot_nc.py
cases/bomex/: NAMELIST  bomex_profs.py
cases/diuv3/: NAMELIST
cases/lsm_setup/: NAMELIST  SURFNAMELIST
cases/lsm_test/: NAMELIST  SURFNAMELIST
cases/rico/: NAMELIST  make_particles.py
cases/speedtest/: NAMELIST
cases/test_uclales/: NAMELIST  clean  make_particles.py  partstartpos
config/: FindHDF5.cmake  FindNETCDF.cmake  archer.cmake  archlinux.cmake  blizzard.cmake  blizzard.tenstr.cmake  default.cmake  defaultgcc.cmake  defaultintel.cmake  hdftest.cmake  huygens.cmake  lmu_mim.cmake  lmu_mim.intel.cmake  mistral.tenstr.cmake  mpipc.cmake  osx.cmake  squall.cmake  thunder.cmake  thunder.tenstr.gcc.cmake  thunder.tenstr.intel.cmake  thunder_intel13.cmake  tornado.cmake
doc/: Changelog  KnownIssues  LPTM_doc.tex  README  ametsoc.bst  ametsoc.sty  git_uclales.tex  les_doc.aux  les_doc.bbl  les_doc.bbl.aux  les_doc.blg  les_doc.dvi  les_doc.tex  les_doc.tex.backup  les_doc.tex~  les_doc.toc  references_LPTM.bib  timestep.ai
doc/docv2/: doxyfile_uclales
doc/leslectures/: UCLALESSession2013.tex  cumulus.tex  drycbl.tex  dynamics.tex  horgrid1.fig  horgrid2.fig  horgrid3.fig  leslectures.tex  leslectures2013.tex  microphysics.tex  options.tex  other.tex  overview.tex  radiation.tex  setup.tex  statistics.tex  stratocumulus.tex  structure.tex  surface.tex
doc/sample_output/: dcbl.ps.nc  dcbl.ts.nc  rico.ps.nc  rico.ts.nc  smoke.ps.nc  smoke.ts.nc
misc/LPTM/: Makefile  auto_particlemerge.py  make_particles.py  merge_particles.f90  merge_particles.py
misc/LPTM/Drops/: Makefile  merge_drops  merge_drops.f90
misc/analysis/: debugg.F90  flowvis.ncl  parallel.ncl  plotfld.csh  tseries.ncl
misc/analysis/ncl_progs/: parallel_3d.ncl  reduce.ncl  reduce_256.ncl  time_ev_pv.ncl  time_ev_pv_72.csh  tseries_ast.ncl  write3d_nc_astex_avizo_ql.ncl  write3d_nc_astex_ql.ncl
misc/analysis/tracking/: checkcloudtype_v2.f90  tracking_coarse.f90  tracking_instant.f90  tracking_time.f90  trackmapper.f90  trackmappercond.f90
misc/initfiles/: NAMELIST_astex  NAMELIST_dycoms2  README  bstate.f95  bstate_astex.f95  ls_flux_in_arm  ls_flux_in_arm_fixedforcings  lscale_astex_new_sst.f95  lscale_in_astex  namelist_arm  namelist_bellon  namelist_bubble  namelist_cumulus  namelist_drycbl  namelist_dycm01  namelist_dycm02  namelist_rico  namelist_s12ctl  namelist_smoke  s12ctl_backrad_in  s12ctl_lstend_in  s12ctl_nudge_in  s12ctl_sound_in  sound_in_astex  sound_in_bubble  sound_in_bubble.xls  sounding_WK82.m  zgrid.gcss9.f  zm_grid_in  zt_grid_in
misc/initfiles/cgils/s11/4co2/: NAMELIST  backrad_in  lstend_in  zt_grid_in
misc/initfiles/cgils/s11/cmip/: NAMELIST  backrad_in  lstend_in  nudge_in  sound_in  zm_grid_in
misc/initfiles/cgils/s11/ctl/: NAMELIST  lstend_in  nudge_in  sound_in
misc/initfiles/cgils/s12/4co2/: NAMELIST  lstend_in  nudge_in
misc/initfiles/cgils/s12/cmip/: NAMELIST  backrad_in  lstend_in  nudge_in  sound_in
misc/initfiles/cgils/s12/ctl/: NAMELIST  backrad_in  lstend_in  sound_in
misc/initfiles/cgils/s12/ctl/datafiles/: hsrt.lay
misc/initfiles/cgils/s6/4co2/: NAMELIST  lstend_in  nudge_in
misc/initfiles/cgils/s6/4co2/datafiles/: s11.lay
misc/initfiles/cgils/s6/cmip/: NAMELIST  backrad_in  lstend_in  nudge_in  sound_in
misc/initfiles/cgils/s6/cmip/datafiles/: esrt.lay  ksas.lay
misc/initfiles/cgils/s6/ctl/: NAMELIST  backrad_in  lstend_in  sound_in  zm_grid_in
misc/initfiles/cgils/s6/ctl/datafiles/: ktrop.lay
misc/initfiles/transition/: trans_cases_ucla.tar
misc/initfiles/transition/trans_cases_ucla/trans_fast/: NAMELIST  lscale_in  reduce_256.ncl  sound_in
misc/initfiles/transition/trans_cases_ucla/trans_fast/datafiles/: astx.lay
misc/initfiles/transition/trans_cases_ucla/trans_ref/: NAMELIST_trref  lscale_in_ref  sound_in_ref
misc/initfiles/transition/trans_cases_ucla/trans_ref/inter/: NAMELIST  sound_in
misc/initfiles/transition/trans_cases_ucla/trans_ref/inter/datafiles/: tran.lay
misc/initfiles/transition/trans_cases_ucla/trans_slow/: NAMELIST  lscale_in  sound_in
misc/jobscripts/: README_auto.txt  llrunon128  llrunon128procs  llrunon256procs_ex  llrunon64procs  llrunon64procs_ex  llrunserial  runlesontornado.job  runscript_course_mpi  runscript_course_seq
misc/makefiles/: Makefile_blizzard  Makefile_ecmwf  Makefile_mpipc  Makefile_tornado
misc/original_code/: NAMELIST
misc/scripts/: call_mss.csh  cdo_anomaly  mss.csh  resubmit.csh  ucla_merge.py
misc/synthesis/: Makefile  g9.reduce.ncl  mpireduce.ncl  mpireduce_128.ncl  nc.ps.ncl  nc.ts.ncl  reduce.ncl  reduceps.f90  reducets.f90  rename.csh
misc/synthesis/reshape_hist/: Makefile  read_hist_1.f90  read_hist_2.f90  read_hist_3.f90  read_hist_srfc.f90  read_hist_srfc_rad.f90  reshape_hist.f90  write_hist_1.f90  write_hist_2.f90  write_hist_3.f90  write_hist_srfc.f90  write_hist_srfc_rad.f90
src/: CMakeLists.txt  LES.f90  Makefile  advf.f90  advl.f90  centered.f90  defs.f90  forc.f90  gmon.out  grid.f90  ice_sb.F90  icemcrp.f90  init.f90  lset.f90  lsmdata.f90  lsvar.f90  mcrp.f90  mcrp_ice.f90  modcross.f90  modnetcdf.f90  modnudge.f90  modtimedep.f90  mpi_interface.f90  ncio.f90  ncio.f90~  output  parkind1.F90  particles.f90  particles.f90.20120604  prss.f90  prss.ps  rad_cldwtr.f90  rad_corkds.f90  rad_d4strm.f90  rad_driver.f90  rad_driver_3d.f90  rad_gcss.f90  rad_nca.f90  rad_rndnmb.f90  rad_solver.f90  (+30 more)
src/mpi/: mpi_interface.f90
src/old/: rad_solver.v2
src/seq/: seq_interface.f90
